// File: internal/auth/auth.proto
syntax = "proto3";

package auth;

option go_package = "speech/internal/auth";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse);
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
  rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse);
  rpc ResendVerificationEmail(ResendVerificationEmailRequest) returns (ResendVerificationEmailResponse);
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string name = 4;
  string about = 5;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
  string user_id = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  string access_token = 3;
  string refresh_token = 4;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  bool success = 1;
  string access_token = 2;
  string refresh_token = 3;
}

message ForgotPasswordRequest {
  string email = 1;
}

message ForgotPasswordResponse {
  bool success = 1;
  string message = 2;
}

message ResetPasswordRequest {
  string email = 1;
  string code = 2;
  string new_password = 3;
}

message ResetPasswordResponse {
  bool success = 1;
  string message = 2;
}


message VerifyEmailRequest {
  string email = 1;
  string code = 2;
}

message VerifyEmailResponse {
  bool success = 1;
  string message = 2;
}

message ResendVerificationEmailRequest {
  string email = 1;
}

message ResendVerificationEmailResponse {
  bool success = 1;
  string message = 2;
}